--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "algolia-headless",
+  "name": "wp-search-with-algolia-headless-extensions",
   "version": "0.1.0",
   "main": "Gruntfile.js",
-  "author": "YOUR NAME HERE",
+  "author": "hideokamoto",
   "scripts": {
     "start": "grunt default",
     "readme": "grunt readme",
